tests/tooling/fixtures/native/recovery/negative/negative_switch_case_identifier_reassigned_conservative_reject.objc3
// Negative fixture: reassigned identifier conditions remain conservative in switch case-body return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseIdentifierReassignedConservativeReject;

fn main() -> i32 {
  let value = 1;
  let flag = 0;
  flag = value;
  switch (value) {
    case 1:
      while (flag) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
